# regedit

./: .gitignore  CMakeLists.txt  Makefile
inc/: BaseWindow.h  regedit.h  regnode.h  regtree.h
res/: application.manifest  icon.xcf  nodeicons.xcf  regedit.rc
src/: regedit.c  regedit.rc  regnode.c  regtree.c
